<resources>
    <string name="app_name">Open Query Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refrescar</string>
    <string name="title_activity_main">Open Query Mobile</string>
    <string name="title_activity_tabs">Resultados</string>

    <string name="title_activity_results">Resultados</string>                       <!-- BORRAR CUANDO SE BORRE LA ACTIVITY -->
    <string name="title_activity_results_activity_detail">Vista detallada</string>  <!-- BORRAR CUANDO SE BORRE LA ACTIVITY -->
    <string name="section_format">Hello World from section: %1$d</string>           <!-- BORRAR CUANDO SE BORRE EL FRAGMENT -->



    <!-- Strings for main activity -->
    <string name="header_title_dataset">Conjunto de datos</string>
    <string name="header_title_properties">Propiedades</string>
    <string name="title_property_filter">Filtro:</string>
    <string name="title_property_mandatory">Obligatoria</string>
    <string name="title_property_first_parameter">parámetro 1</string>
    <string name="title_property_second_parameter">parámetro 2</string>

    <string name="help_message_title_properties_list">Ayuda</string>
    <string name="help_message_content_properties_list_part_1">Marque en la casilla de la izquierda las propiedades que desea en la consulta y seleccione los filtros de consulta sobre los datos.</string>
    <string name="help_message_content_properties_list_part_2">Si marca la casilla \'Obligatorio\' no se mostraran aquellos datos que no posean esa propiedad.</string>

    <string name="error_message_title_properties_list">Error</string>
    <string name="error_message_content_properties_list">Los datos no se han cargado correctamente. Vuelva a intentarlo de nuevo.</string>

    <string name="warning_message_title_execute_query">Advertencia</string>
    <string name="warning_message_content_execute_query">Seleccione al menos una propiedad de la lista para realizar la consulta.</string>

    <string name="progress_dialog_title">Obteniendo datos...</string>
    <string name="progress_dialog_message">Espere un momento...</string>

    <string name="empty_element">No hay datos para mostrar</string>


    <!-- Strings for result details activity -->
    <string name="title_tab_detail">DETALLE</string>
    <string name="title_tab_list">LISTADO</string>
    <string name="title_tab_map">MAPA</string>
    <string name="resource_name_class">Resource</string>


    <!-- Strings for result details fragment -->
    <string name="tab_detail_default_resource">recurso</string>
    <string name="tab_detail_header_title">Información del recurso</string>
    <string name="tab_detail_default_textview_name">Propiedad</string>
    <string name="tab_detail_default_textview_value">valor</string>


    <!-- Strings for result list fragment -->
    <string name="tab_list_default_resource">recurso</string>
    <string name="tab_list_default_header_title">0 recursos encontrados</string>
    <string name="tab_list_end_header_title">recursos encontrados</string>
    <string name="tab_list_default_textview_name">URI</string>
    <string name="tab_list_default_textview_value">Propiedad: valor</string>

    <string name="info_message_title_resources_list">Información</string>
    <string name="info_message_content_resources_list">En la lista puede ver la URL de cada recurso y el valor de una de las propiedades que seleccionó previamente para realizar la consulta.</string>


    <!-- Strings for result map fragment -->
    <string name="tab_map_textview_map_type">Tipo de mapa:</string>
    <string name="tab_map_type_normal">Normal</string>
    <string name="tab_map_type_hybrid">Híbrido</string>
    <string name="tab_map_type_satellite">Satélite</string>
    <string name="tab_map_type_terrain">Terreno</string>

    <string name="tab_map_infoWindow_title_current_position">Su posición</string>

    <string name="tab_map_textview_filter_distance">Filtro de distancia:</string>

    <string name="tab_map_title_dialog_check_gps">Activar GPS</string>
    <string name="tab_map_message_dialog_check_gps">El GPS está desactivado. ¿Quiere activarlo?</string>
    <string name="tab_map_positive_button_text_dialog_check_gps">Sí</string>
    <string name="tab_map_negative_button_text_dialog_check_gps">No</string>

    <string name="tab_map_message_location">Obteniendo la posición actual...</string>
    <string name="tab_map_message_route">Calculando ruta...</string>


    <!-- Strings for navigation drawer -->
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>

    <string name="navigation_drawer_header_title">Open Query Mobile</string>
    <string name="navigation_drawer_header_subtitle">Visualización de datos mediante la explotación de los puntos de consulta SPARQL de varios portales Open Data</string>

    <string name="navigation_drawer_menu_item_link_opendata">Opendata Cáceres</string>
    <string name="navigation_drawer_menu_item_twitter_opendata">Twitter Opendata Cáceres</string>
    <string name="navigation_drawer_menu_item_advanced_options">Opciones avanzadas</string>
    <string name="navigation_drawer_menu_item_data_source_options">Fuente de datos</string>
    <string name="navigation_drawer_menu_item_settings">Ajustes</string>
    <string name="navigation_drawer_menu_item_about">Acerca de</string>
    <string name="navigation_drawer_menu_section_title_configuration">Configuración</string>


    <!-- Strings for SPARQL settings activity -->
    <string name="title_activity_sparqlpreferences">Opciones de consulta</string>

    <string name="categorty_order_by">Ordenación</string>
    <string name="category_limit">Limite de resultados</string>
    <string name="category_offset">Desplazamiento</string>

    <string name="title_order_by_check">Ordenar los resultados</string>
    <string name="summary_order_by_check">Activar / desactivar la ordenación de los resultados de las consultas realizadas</string>

    <string name="title_order_type">Tipo de orden</string>
    <string name="summary_order_type">Selecciona la forma de ordenar los resultados</string>
    <string name="title_dialog_order_type">Ordenación</string>

    <string name="title_order_property">Propiedad para ordenar</string>
    <string name="summary_order_property">Selecciona la propiedad por la que ordenar los resultados</string>
    <string name="title_dialog_order_property">Indicar propiedad</string>
    <string name="default_value_order_property">Ninguna</string>

    <string name="title_limit_check">Limitar el número de resultados</string>
    <string name="summary_limit_check">Activar / desactivar la limitación de los resultados de las consultas realizadas</string>

    <string name="title_limit">Número máximo de resultados</string>
    <string name="summary_limit">Selecciona el número máximo de resultados que desea obtener</string>
    <string name="title_dialog_limit">Introduce valor</string>

    <string name="title_offset_check">Saltar los primeros resultados</string>
    <string name="summary_offset_check">Activar / desactivar el desplazamiento sobre los resultados de las consultas realizadas</string>

    <string name="title_offset">Número de resultados a saltar</string>
    <string name="summary_offset">Selecciona el número de resultados que desea saltar</string>
    <string name="title_dialog_offset">Introduce valor</string>


    <!-- Strings for DATA SOURCE settings activity -->
    <string name="title_activity_datasourcepreferences">Fuente de datos</string>

    <string name="categorty_data_source">Fuente de datos</string>

    <string name="title_data_source_check">Seleccionar la fuente de los datos</string>
    <string name="summary_data_source_check">Activar / desactivar la elección de la fuente de los datos</string>

    <string name="title_data_source">Fuente de datos</string>
    <string name="summary_data_source">Selecciona la fuente de los datos</string>
    <string name="title_dialog_data_source">Indicar fuente de datos</string>
    <string name="default_value_data_source">Ninguna</string>

    <string name="title_new_data_source">Nueva fuente de datos</string>
    <string name="summary_new_data_source">Introduce una nueva fuente de datos</string>
    <string name="title_dialog_new_data_source">Introduce URL</string>


    <!-- Strings for ADS -->
    <string name="banner_ad_unit_id">ca-app-pub-8806067539489002/3940010373</string>


    <!-- Strings for About Us activity -->
    <string name="title_activity_about_us">Información</string>

    <string name="about_us_app_info_1">Visualización de datos mediante la explotación de los puntos
        de consulta SPARQL de los portales Open Data que cumplan las recomendaciones del W3C
    </string>
    <string name="about_us_app_info_2">La aplicación permite obtener, de forma universal, datos
        relativos a las clases registradas en un portal y a las propiedades de las mismas, aplicando
        filtros según el tipo de dato de esas propiedades
    </string>

    <string name="about_us_author">Autor</string>
    <string name="about_us_author_value">Antonio Álvarez Rodrigo</string>

    <string name="about_us_contact">Contacto</string>
    <string name="about_us_contact_value">alrodev5@gmail.com</string>

    <string name="about_us_email_signature">Enviado desde la app Open Query Mobile</string>


    <!-- Strings for settings activity -->
    <!--<string name=""></string>-->




</resources>
