<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_twitter"
            android:icon="@mipmap/my_icon_twitter"
            android:title="@string/navigation_drawer_menu_item_twitter_app" />
    </group>

    <item android:title="@string/navigation_drawer_menu_section_title_configuration">
        <menu>
            <item
                android:id="@+id/nav_advanced_options"
                android:icon="@mipmap/my_icon_settings"
                android:title="@string/navigation_drawer_menu_item_advanced_options" />
            <item
                android:id="@+id/nav_data_source_options"
                android:icon="@mipmap/my_icon_rdf"
                android:title="@string/navigation_drawer_menu_item_data_source_options" />
        </menu>
    </item>

    <item android:title="@string/navigation_drawer_menu_item_about">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/navigation_drawer_menu_item_about" />
        </menu>
    </item>

</menu>