<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_about_us" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.myapplication.AboutUsActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dip"
        android:paddingBottom="10dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dip"
            android:paddingBottom="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/app_name"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/about_us_app_info_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/about_us_app_info_2" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dip"
            android:paddingBottom="10dip">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp">

                <ImageView
                    android:id="@+id/imageViewAuthor"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_dialog_info"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="0dp"
                    android:tint="#b6b6b6" />

                <TextView
                    android:id="@+id/authorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/about_us_author"
                    android:textColor="#212121"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/authorValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_author_value"
                    android:textColor="#B6B6B6"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/authorLabel"
                    android:layout_alignLeft="@+id/authorLabel"
                    android:layout_alignStart="@+id/authorLabel" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageViewContact"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@android:drawable/ic_dialog_email"
                    android:layout_marginLeft="12dp"
                    android:tint="#b6b6b6"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/contactLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/about_us_contact"
                    android:textColor="#212121"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/contactValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_contact_value"
                    android:textColor="#B6B6B6"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/contactLabel"
                    android:layout_alignLeft="@+id/contactLabel"
                    android:layout_alignStart="@+id/contactLabel" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>





</android.support.v4.widget.NestedScrollView>
